# mumbai-lake-levels

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: tests.yml
data/: manual_lake_readings.csv  manual_rainfall_readings.csv  reference_data.json
src/lakelevels/: cli.py  config.py  dashboard.py  db.py  models.py  reference.py
src/lakelevels/sources/: bmc_lakes.py  imd_rainfall.py  manual.py
tests/: test_reference.py
