[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lakelevels"
version = "0.1.0"
description = "Track Mumbai's lake water levels, rainfall, and water supply/demand data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "pandas>=2.2", "altair>=5.3"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
